examples/flounder-full/apps/backend/src/shared/errors/cognito-user-already-exists.exception.ts
export class CognitoUserAlreadyExistsException extends Error {}
